package com.microsoft.azure.adf.dataflow.parser.lexical

import scala.util.parsing.combinator.lexical.StdLexical

/**
 * TODO:: extend the standard lexical class for Spark conversion
 */
class SparkDataFlowLexical extends  StdLexical {

}
